# local-console-security-testing

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  README.md.backup  REBUILD.sh  coverage.xml  main.py  podman-compose.yml  pyproject.toml  pytest.ini
config/: .env.template  README.md  docker-compose.yml  secrets-management.md  security-config.yml
config/mosquitto/: acl.conf  mosquitto.conf
docker/: config-service.Dockerfile  pki-service.Dockerfile
docs/: CERTIFICATE_DOWNLOAD_GUIDE.md  CHROME_CLIENT_CERT_MACOS.md  HIVE_MIND_SUMMARY.md  MACOS_CHROME_SOLUTION.md  MACOS_SETUP.md  MTLS_TESTING_GUIDE.md  MTLS_WORKFLOW.md  PASSWORD_PROMPTS.md  PODMAN_QUICKSTART.md  QUICK_START.md  RESEARCH-SUMMARY.md  code-examples.md  implementation-roadmap.md  pki-architecture.md  security-analysis.md  security-best-practices.md
scripts/: generate-server-certs.sh  macos-cert-import.sh  setup-podman.sh  start-config-service.sh  test-p12-import.sh
src/: __init__.py
src/config_service/: __init__.py  app.py  auth.py  config_manager.py  main.py
src/crypto_utils/: __init__.py  cert_formats.py  verification.py  x509_utils.py
src/pki_service/: __init__.py  ca_manager.py  cert_issuer.py  main.py  models.py
tests/: FINAL_REPORT.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_mtls_workflow.sh
tests/integration/: __init__.py  test_config_service.py  test_pki_service.py
tests/security/: __init__.py  test_security.py
tests/unit/: __init__.py  test_ca_manager.py  test_cert_issuer.py  test_verification.py
tests/utils/: test_helpers.py
(+3 files in other folders)
