[project]
name = "local-console-security-testing"
version = "0.1.0"
description = "PKI Management System with FastAPI and Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aceiot-models>=0.3.4",
    "click>=8.3.0",
    "fastapi>=0.121.0",
    "pydantic[email]>=2.12.4",
    "uvicorn>=0.34.0",
    "cryptography>=44.0.0",
    "streamlit>=1.41.1",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "jinja2>=3.1.2",
]

[dependency-groups]
dev = [
    "pyrefly>=0.40.1",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.4",
]
